# 13.pyclass

./: README.md  pyproject.toml
data/csv_files/: 2.csv
src/: __main__.py
src/lib/classes/: AbstractDataSource.py  CsvSource.py  FilesSources.py  JsonSource.py  TxtSource.py
